src/snapshots/templates__error__test__error_unexpected_endif.snap
---
source: src/error.rs
assertion_line: 210
expression: "Hello {% endif %}"

---
Unexpected keyword: endif. Expected one of: if, for

error: 
  ┌─ -test-:1:10
  │
1 │ Hello {% endif %}
  │          ^^^^^


